--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -72,4 +72,37 @@ body {
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    font-family: "Barlow", sans-serif;
+}
+
+h1 {
+    font-family: "Barlow";
+    font-weight: 900;
+    text-transform: uppercase;
+}
+.container-fluid.min-vh-100.d-flex {
+    background-image: url(menu_pattern3-min.png);
+    background-size: contain;
+}
+.btn-especial {
+    font-family: "Permanent Marker", cursive;
+    color: #fff;
+    font-size: 25px;
+    background: #54595f;
+    border-radius: 30px;
+}
+.btn-especial:hover {
+    color: #fff;
+    background: #333539;
+}
+label.form-label {
+    font-family: "Barlow";
+    font-weight: 700;
+}
+.login {
+    color: #e7272d;
+    font-family: "Permanent Marker", Sans-serif;
+    font-size: 24px;
+    font-weight: 400;
+    text-decoration: none;
 }
